--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scope-search",
   "displayName": "scope-search",
   "description": "area-search",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -10,6 +10,7 @@
   "categories": [
     "Other"
   ],
+  "icon": "./scope-search-logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/WONISHI/scope-search.git"
