--- a/.logrc
+++ b/.logrc
@@ -1,4 +1,77 @@
 {
-  "a": "111",
-  "b": "222"
+  "logEnhancerConfig": {
+    "log": "[icon]-[line]-[$0]",
+    "info": "[icon]-[line]-[$0]",
+    "warn": "[icon]-[line]-[$0]",
+    "error": "[icon]-[line]-[$0]",
+    "debug": "[icon]-[line]-[$0]",
+    "trace": "[icon]-[line]-[$0]",
+    "assert": "[icon]-[line]-[$0]",
+    "count": "[icon]-[line]-[$0]",
+    "countReset": "[icon]-[line]-[$0]",
+    "group": "[icon]-[line]-[$0]",
+    "groupCollapsed": "[icon]-[line]-[$0]",
+    "groupEnd": "[icon]-[line]-[$0]",
+    "table": "[icon]-[line]-[$0]",
+    "time": "[icon]-[line]-[$0]",
+    "timeEnd": "[icon]-[line]-[$0]",
+    "timeLog": "[icon]-[line]-[$0]",
+    "clear": "[icon]-[line]-[$0]",
+    "dir": "[icon]-[line]-[$0]",
+    "dirxml": "[icon]-[line]-[$0]",
+    "profile": "[icon]-[line]-[$0]",
+    "profileEnd": "[icon]-[line]-[$0]",
+    "timeStamp": "[icon]-[line]-[$0]",
+    "context": "[icon]-[line]-[$0]"
+  },
+  "unitTime": {
+    "log": "YYYY-MM-DD HH:mm:ss",
+    "info": "YYYY-MM-DD HH:mm:ss",
+    "warn": "YYYY-MM-DD HH:mm:ss",
+    "error": "YYYY-MM-DD HH:mm:ss",
+    "debug": "YYYY-MM-DD HH:mm:ss",
+    "trace": "YYYY-MM-DD HH:mm:ss",
+    "assert": "YYYY-MM-DD HH:mm:ss",
+    "count": "YYYY-MM-DD HH:mm:ss",
+    "countReset": "YYYY-MM-DD HH:mm:ss",
+    "group": "YYYY-MM-DD HH:mm:ss",
+    "groupCollapsed": "YYYY-MM-DD HH:mm:ss",
+    "groupEnd": "YYYY-MM-DD HH:mm:ss",
+    "table": "YYYY-MM-DD HH:mm:ss",
+    "time": "YYYY-MM-DD HH:mm:ss",
+    "timeEnd": "YYYY-MM-DD HH:mm:ss",
+    "timeLog": "YYYY-MM-DD HH:mm:ss",
+    "clear": "YYYY-MM-DD HH:mm:ss",
+    "dir": "YYYY-MM-DD HH:mm:ss",
+    "dirxml": "YYYY-MM-DD HH:mm:ss",
+    "profile": "YYYY-MM-DD HH:mm:ss",
+    "profileEnd": "YYYY-MM-DD HH:mm:ss",
+    "timeStamp": "YYYY-MM-DD HH:mm:ss",
+    "context": "YYYY-MM-DD HH:mm:ss"
+  },
+  "uuidLen": {
+    "log": 12,
+    "info": 12,
+    "warn": 12,
+    "error": 12,
+    "debug": 12,
+    "trace": 12,
+    "assert": 12,
+    "count": 12,
+    "countReset": 12,
+    "group": 12,
+    "groupCollapsed": 12,
+    "groupEnd": 12,
+    "table": 12,
+    "time": 12,
+    "timeEnd": 12,
+    "timeLog": 12,
+    "clear": 12,
+    "dir": 12,
+    "dirxml": 12,
+    "profile": 12,
+    "profileEnd": 12,
+    "timeStamp": 12,
+    "context": 12
+  }
 }
