--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "onLanguage:vue",
     "onLanguage:html"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
