--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/babel__traverse": "^7.28.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.54.0",
@@ -135,6 +136,8 @@
     "node": "22.18.0"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.3",
+    "@babel/traverse": "^7.28.3",
     "dayjs": "^1.11.13",
     "vscode-languageclient": "^9.0.1"
   }
