--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scope-search",
+  "name": "quick-ops",
   "displayName": "scope-search",
   "description": "area-search",
   "version": "0.0.2",
