feat:修复打包报错以及调整版本号

--- a/.logrc
+++ b/.logrc
@@ -74,5 +74,9 @@
     "timeStamp": 12,
     "context": 12
   },
-  "rootPath": "./src/"
+  "alias": {
+    "path":{
+      "@/": "./src/"
+    }
+  }
 }
