--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quick-ops",
   "displayName": "quickOps",
   "description": "quick-ops",
-  "version": "0.0.2",
+  "version": "0.0.3-beta",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -25,7 +25,7 @@
     "onLanguage:vue",
     "onLanguage:html"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -127,6 +127,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
+    "pug": "^3.0.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.9.2",
     "webpack": "^5.101.0",
