--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
       {
         "command": "extension.createLogrcFile",
         "title": "创建 .logrc 文件"
+      },
+      {
+        "command": "extension.CopyTsType",
+        "title": "复制 TypeScript 类型"
       }
     ],
     "menus": {
@@ -82,6 +86,13 @@
           "command": "extension.createLogrcFile",
           "group": "navigation@1",
           "when": "Extension.logrcNotFound"
+        }
+      ],
+      "editor/context": [
+        {
+          "command": "extension.CopyTsType",
+          "group": "navigation@1",
+          "when": "Extension.SelectTots"
         }
       ]
     }
