--- a/package.json
+++ b/package.json
@@ -136,8 +136,10 @@
     "@babel/parser": "^7.28.3",
     "@babel/traverse": "^7.28.3",
     "@vue/compiler-sfc": "^3.5.20",
+    "cheerio": "^1.1.2",
     "dayjs": "^1.11.13",
     "ignore": "^7.0.5",
+    "mockjs": "^1.1.0",
     "terser-webpack-plugin": "^5.3.14",
     "vscode-languageclient": "^9.0.1"
   }
