--- a/package.json
+++ b/package.json
@@ -112,8 +112,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
+    "compile-tests": "tsc -p . --outDir dist",
+    "watch-tests": "tsc -p . -w --outDir dist",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
@@ -150,6 +150,7 @@
     "ignore": "^7.0.5",
     "mockjs": "^1.1.0",
     "terser-webpack-plugin": "^5.3.14",
-    "vscode-languageclient": "^9.0.1"
+    "vscode-languageclient": "^9.0.1",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
