--- a/.logrc
+++ b/.logrc
@@ -1,80 +1,14 @@
 {
   "logEnhancerConfig": {
-    "log": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "info": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "warn": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "error": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "debug": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "trace": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "assert": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "count": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "countReset": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "group": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "groupCollapsed": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "groupEnd": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "table": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "time": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "timeEnd": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "timeLog": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "clear": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "dir": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "dirxml": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "profile": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "profileEnd": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "timeStamp": "[icon]-[~/^/^/name]-[line]-[$0]",
-    "context": "[icon]-[~/^/^/name]-[line]-[$0]"
+    "log": "[icon]-[~/^/^/name]-[line]-[$0]"
   },
   "unitTime": {
-    "log": "YYYY-MM-DD HH:mm:ss",
-    "info": "YYYY-MM-DD HH:mm:ss",
-    "warn": "YYYY-MM-DD HH:mm:ss",
-    "error": "YYYY-MM-DD HH:mm:ss",
-    "debug": "YYYY-MM-DD HH:mm:ss",
-    "trace": "YYYY-MM-DD HH:mm:ss",
-    "assert": "YYYY-MM-DD HH:mm:ss",
-    "count": "YYYY-MM-DD HH:mm:ss",
-    "countReset": "YYYY-MM-DD HH:mm:ss",
-    "group": "YYYY-MM-DD HH:mm:ss",
-    "groupCollapsed": "YYYY-MM-DD HH:mm:ss",
-    "groupEnd": "YYYY-MM-DD HH:mm:ss",
-    "table": "YYYY-MM-DD HH:mm:ss",
-    "time": "YYYY-MM-DD HH:mm:ss",
-    "timeEnd": "YYYY-MM-DD HH:mm:ss",
-    "timeLog": "YYYY-MM-DD HH:mm:ss",
-    "clear": "YYYY-MM-DD HH:mm:ss",
-    "dir": "YYYY-MM-DD HH:mm:ss",
-    "dirxml": "YYYY-MM-DD HH:mm:ss",
-    "profile": "YYYY-MM-DD HH:mm:ss",
-    "profileEnd": "YYYY-MM-DD HH:mm:ss",
-    "timeStamp": "YYYY-MM-DD HH:mm:ss",
-    "context": "YYYY-MM-DD HH:mm:ss"
+    "log": "YYYY-MM-DD HH:mm:ss"
   },
   "uuidLen": {
-    "log": 12,
-    "info": 12,
-    "warn": 12,
-    "error": 12,
-    "debug": 12,
-    "trace": 12,
-    "assert": 12,
-    "count": 12,
-    "countReset": 12,
-    "group": 12,
-    "groupCollapsed": 12,
-    "groupEnd": 12,
-    "table": 12,
-    "time": 12,
-    "timeEnd": 12,
-    "timeLog": 12,
-    "clear": 12,
-    "dir": 12,
-    "dirxml": 12,
-    "profile": 12,
-    "profileEnd": 12,
-    "timeStamp": 12,
-    "context": 12
+    "log": 12
   },
-  "excludedConfigFiles": true,
+  "excludedConfigFiles": false,
   "DEV": true,
   "mark":{
 
