--- a/.logrc
+++ b/.logrc
@@ -20,7 +20,17 @@
     "ignoreList": []
   },
   "project": {
-    "marks": {},
+    "marks": {
+      "@FIXME": {
+        "backgroundColor": "#9c27b0",
+        "color": "#fff",
+        "borderRadius": "2px"
+      },
+      "@OPTIMIZE": {
+        "backgroundColor": "#00bcd4",
+        "color": "#fff"
+      }
+    },
     "alias": {
       "@/": "./src/"
     }
