--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     }
   },
   "scripts": {
-    "build": "npx vsce package",
+    "build": "npx vsce package --no-yarn",
     "vscode:prepublish": "pnpm run package",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
