--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "url": "https://github.com/WONISHI/quick-ops.git"
   },
   "activationEvents": [
-    "onStartupFinished"
+    "onStartupFinished",
+    "onLanguage:vue",
+    "onLanguage:html",
+    "onLanguage:javascriptreact",
+    "onLanguage:typescriptreact"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -65,6 +69,11 @@
         "command": "quickOps.generateMockData",
         "title": "生成模拟数据 (Generate Mock Data)",
         "category": "Quick Ops"
+      },
+      {
+        "command": "quick-ops.generateStyleStructure",
+        "title": "生成样式结构 (Generate SCSS)",
+        "category": "Quick Ops"
       }
     ],
     "menus": {
@@ -90,6 +99,11 @@
           "command": "quickOps.createConfigFile",
           "group": "quickOps@1",
           "when": "quickOps.context.configMissing"
+        },
+        {
+          "command": "quick-ops.generateStyleStructure",
+          "group": "quickOps@2",
+          "when": "resourceLangId == vue || resourceLangId == html || resourceLangId == javascriptreact || resourceLangId == typescriptreact"
         }
       ],
       "editor/context": [
@@ -119,7 +133,9 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
     "@types/babel__traverse": "^7.28.0",
+    "@types/cheerio": "^1.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.54.0",
@@ -143,8 +159,9 @@
     "yarn": "4.10.3"
   },
   "dependencies": {
-    "@babel/parser": "^7.28.3",
-    "@babel/traverse": "^7.28.3",
+    "@babel/parser": "^7.28.6",
+    "@babel/traverse": "^7.28.6",
+    "@babel/types": "^7.28.6",
     "@types/express": "^5.0.3",
     "@types/mockjs": "^1.0.10",
     "@vue/compiler-sfc": "^3.5.20",
