--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "vscode": "^1.54.0"
   },
-  "publisher": "WONISHI",
+  "publisher": "quick-ops",
   "categories": [
     "Other"
   ],
