--- a/package.json
+++ b/package.json
@@ -176,6 +176,7 @@
     "@types/babel__traverse": "^7.28.0",
     "@types/cheerio": "^1.0.0",
     "@types/glob": "^9.0.0",
+    "@types/lodash-es": "^4",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.54.0",
@@ -212,7 +213,9 @@
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "ignore": "^7.0.5",
+    "lodash-es": "^4.17.23",
     "mockjs": "^1.1.0",
+    "nanoid": "^5.1.6",
     "terser-webpack-plugin": "^5.3.14",
     "vscode-languageclient": "^9.0.1",
     "webpack-bundle-analyzer": "^4.10.2"
