feat:优化打包优化文件体积

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -20,3 +20,8 @@ vsc-extension-quickstart.md
 **/*.ts
 **/.vscode-test.*
 pnpm-lock.yaml
+.turbo/**
+dist/*.map  
+dist/*.txt
+**/*.tsbuildinfo
+PERFORMANCE.md
